PROJECT(maplite)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/ ${CMAKE_ROOT}/Modules/   )

FIND_PACKAGE(Sqlite3 REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)

# Boost
FIND_PACKAGE(Boost 1.49 REQUIRED COMPONENTS 
        regex filesystem system coroutine context program_options thread )

INCLUDE_DIRECTORIES(
        ${SQLITE3_INCLUDE_DIR}
        ${ZLIB_INCLUDE_DIR}
        ${Boost_INCLUDE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)

ADD_DEFINITIONS( -std=c++11 )

SET (SRC_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/src)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)


