PROJECT(WS)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/ ${CMAKE_ROOT}/Modules/   )

FIND_PACKAGE(Sqlite3 REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)

# Boost
FIND_PACKAGE(Boost 1.49 REQUIRED COMPONENTS 
        regex filesystem system coroutine context program_options thread )

INCLUDE_DIRECTORIES(
        include
        ${SQLITE3_INCLUDE_DIR}
        ${ZLIB_INCLUDE_DIR}
        ${Boost_INCLUDE_DIR}

)

ADD_DEFINITIONS( -std=c++11 )

SET (SRC_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/include/wspp)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)


